[shenker/cloning] As used on 210521 to order ribozymes/RBS library via Salis calculator.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210521 SigW RBS library.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210521 SigW RBS library.ipynb
@@ -118,6 +118,7 @@
    "outputs": [],
    "source": [
     "def _format_seq(seq):\n",
+    "    # TODO: mixed bases in upper case for IDT\n",
     "    return str(sequence.get_seq(seq)).lower()"
    ]
   },
@@ -207,15 +208,6 @@
     "ribozymes = pd.read_csv(io.StringIO(ribozymes_tsv), sep=\"\\s+\", index_col=0)\n",
     "ribozymes[\"Cleaved\"] = ribozymes[\"Sequence\"].map(lambda x: x.split(\"|\")[1])\n",
     "ribozymes[\"Sequence\"] = ribozymes[\"Sequence\"].str.replace(\"|\", \"\", regex=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ribozymes"
    ]
   },
   {
@@ -315,7 +307,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Order"
+    "# RBS library order"
    ]
   },
   {
@@ -324,7 +316,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seq = \"NNNNR\""
+    "seqs = {\n",
+    "    \"SigW_RBSlib1_weak\": \"ACCGGATGTGCTTTCCGGTCTGATGAGTCCGTGAGGACGAAACAGCCTCTACAAATAATTTTGTTTAACCATKRWGGCCAYKGSGGACACAKA\",\n",
+    "    \"SigW_RBSlib1_strong\": \"ACCGGATGTGCTTTCCGGTCTGATGAGTCCGTGAGGACGAAACAGCCTCTACAAATAATTTTGTTTAACCATAACTSASRKARGCGTTMTYTA\",\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleave5 = len(\n",
+    "    ribozymes.loc[\"RiboJ\"][\"Cleaved\"] + part_types[\"5UTR_1\"][\"Downstream overhang\"]\n",
+    ")\n",
+    "cleave3 = 1\n",
+    "seqs = {name: seq[cleave5:-cleave3] for name, seq in seqs.items()}"
    ]
   },
   {
@@ -340,10 +348,11 @@
     ")  # to add between BsmBI recognition site and ends of oligos\n",
     "flanks = (\"CGTCTCGGTCTCa\", \"tGAGACCgGAGACG\")  # storage vector BsmBI flanks\n",
     "seqs_to_order = {}\n",
-    "seq = workflow.add_flanks(\n",
-    "    workflow.add_overhangs(seq.lower(), overhangs),\n",
-    "    [flanks, random_bases],\n",
-    ")"
+    "for name, seq in seqs.items():\n",
+    "    seqs_to_order[name] = workflow.add_flanks(\n",
+    "        workflow.add_overhangs(seq.lower(), overhangs),\n",
+    "        [flanks, random_bases],\n",
+    "    )"
    ]
   },
   {
@@ -354,17 +363,98 @@
    "source": [
     "prefix = \"oLT\"\n",
     "id_num = 48\n",
-    "for term_name, seq in seqs_to_order.items():\n",
+    "for seq_name, seq in seqs_to_order.items():\n",
     "    for sense in (True, False):\n",
     "        if sense:\n",
     "            oligo_seq = seq\n",
     "        else:\n",
     "            oligo_seq = sequence.reverse_complement(seq)\n",
     "        id_ = f\"{prefix}{id_num}\"\n",
-    "        name = f\"SigW_RBSlib_{'sense' if sense else 'antisense'}\"\n",
-    "        print(f\"{id_}\\t{name}\\t{_format_seq(oligo_seq)}\")\n",
+    "        name = f\"{seq_name}_{'sense' if sense else 'antisense'}\"\n",
+    "        print(f\"{id_}\\t{name}\\t{_format_seq(oligo_seq).upper()}\")\n",
     "        id_num += 1"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ribozyme order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "\n",
+    "def random_bases(n):\n",
+    "    return \"\".join(random.choice(\"ATCG\") for _ in range(max(n, 0)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seqs = ribozymes[\"Sequence\"].to_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "min_length = 125  # for gblock\n",
+    "overhangs = overhangs_for(part_types[\"5UTR_1\"])\n",
+    "random_flanks = (\n",
+    "    \"GCTTCA\",\n",
+    "    \"TGCTAA\",\n",
+    ")  # to add between BsmBI recognition site and ends of oligos\n",
+    "flanks = (\"CGTCTCGGTCTCa\", \"tGAGACCgGAGACG\")  # storage vector BsmBI flanks\n",
+    "seqs_to_order = {}\n",
+    "for name, seq in seqs.items():\n",
+    "    seq = workflow.add_flanks(\n",
+    "        workflow.add_overhangs(seq.lower(), overhangs),\n",
+    "        [flanks, random_flanks],\n",
+    "    )\n",
+    "    seq += random_bases(min_length - len(seq))\n",
+    "    seqs_to_order[name] = seq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prefix = \"oLT\"\n",
+    "id_num = 52\n",
+    "for seq_name, seq in seqs_to_order.items():\n",
+    "    for sense in (True,):\n",
+    "        if sense:\n",
+    "            oligo_seq = seq\n",
+    "        else:\n",
+    "            oligo_seq = sequence.reverse_complement(seq)\n",
+    "        id_ = f\"{prefix}{id_num}\"\n",
+    "        # name = f\"{seq_name}_{'sense' if sense else 'antisense'}\"\n",
+    "        print(f\"{id_}\\t{seq_name}\\t{_format_seq(oligo_seq)}\")\n",
+    "        # print(f\"{id_}\\t{_format_seq(oligo_seq)}\")\n",
+    "        # print(f\"{name}\\t{len(oligo_seq)}\")\n",
+    "        id_num += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
