[cloning,shenker/cloning] SheetClient.next_id works.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210522 Automation prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210522 Automation prototyping.ipynb
@@ -92,6 +92,187 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reg.duplicate_collection(\"LIB\", \"TEST\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ids1 = [\"oLT0.2\", \"oLT0.1\"]\n",
+    "ids2 = [\"LIB1b\", \"LIB1a\"]\n",
+    "ids3 = [\"LIB1.1\", \"LIB1.10\"]\n",
+    "ids4 = [\"LIB1.10b\", \"LIB1.10a\"]\n",
+    "ids5 = [\"LIB1a.10\", \"LIB1b.10\"]\n",
+    "ids = ids1 + ids2 + ids3 + ids4 + ids5\n",
+    "import random\n",
+    "\n",
+    "random.shuffle(ids)\n",
+    "ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ID_REGEX = r\"\\s*([A-Za-z]*)\\s*((\\d+(?:\\.\\d+)?)[a-zA-Z]*)?\"\n",
+    "ID_REGEX = r\"\\s*([A-Za-z]*)\\s*(\\d+)(?:[.a-zA-Z]|\\s+|$)\\S*\\s*$\"\n",
+    "\n",
+    "[re.match(ID_REGEX, s).groups() for s in ids]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reg.refresh()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = reg[(\"oTEST\", \"oligos\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c.clear_cache()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c.remote"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c.next_id()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = c.worksheet.get_as_df(value_render=pygsheets.ValueRenderOption.FORMULA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(df.iloc[:, 0].str.strip() != \"\")[::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(df.iloc[:, 0].str.strip() != \"\")[::-1].idxmax()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[: (df.iloc[:, 0].str.strip() != \"\")[::-1].idxmax() + 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.iloc[4, 0] = \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(df.iloc[:, 0].str.strip() == \"\").idxmax()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c.next_id()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Benchling test"
    ]
   },
