--- a/paulssonlab/src/paulssonlab/shenker/cloning/210524 Automation prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210524 Automation prototyping.ipynb
@@ -101,37 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reg.duplicate_collection(\"LIB\", \"TEST\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ids1 = [\"oLT0.2\", \"oLT0.1\"]\n",
-    "ids2 = [\"LIB1b\", \"LIB1a\"]\n",
-    "ids3 = [\"LIB1.1\", \"LIB1.10\"]\n",
-    "ids4 = [\"LIB1.10b\", \"LIB1.10a\"]\n",
-    "ids5 = [\"LIB1a.10\", \"LIB1b.10\"]\n",
-    "ids = ids1 + ids2 + ids3 + ids4 + ids5\n",
-    "import random\n",
-    "\n",
-    "random.shuffle(ids)\n",
-    "ids"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ID_REGEX = r\"\\s*([A-Za-z]*)\\s*((\\d+(?:\\.\\d+)?)[a-zA-Z]*)?\"\n",
-    "ID_REGEX = r\"\\s*([A-Za-z]*)\\s*(\\d+)(?:[.a-zA-Z]|\\s+|$)\\S*\\s*$\"\n",
-    "\n",
-    "[re.match(ID_REGEX, s).groups() for s in ids]"
+    "# reg.duplicate_collection(\"LIB\", \"TEST\")"
    ]
   },
   {
@@ -141,6 +111,15 @@
    "outputs": [],
    "source": [
     "reg.refresh()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del reg.clients[(\"oTEST\", \"oligos\")]"
    ]
   },
   {
@@ -167,6 +146,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "c[\"OTEST4\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "c.remote"
    ]
   },
@@ -185,7 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c.next_id()"
+    "c.clear_cache()"
    ]
   },
   {
@@ -194,7 +182,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = c.worksheet.get_as_df(value_render=pygsheets.ValueRenderOption.FORMULA)"
+    "c[\"oTEST2\"] = {\"Author\": \"oTEST2 author\", \"Name\": \"oTEST2_name\"}\n",
+    "c[\"oTEST4\"] = {\"Author\": \"oTEST4 author\", \"Name\": \"oTEST4_name\"}\n",
+    "c[c.next_id()] = {\"Name\": \"next\"}"
    ]
   },
   {
@@ -203,7 +193,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(df.iloc[:, 0].str.strip() != \"\")[::-1]"
+    "c[c.next_id()] = {\"Name\": \"next2\"}\n",
+    "c[c.next_id()] = {\"Author\": \"next3\"}\n",
+    "c[c.next_id()] = {\"Date\": \"next4\"}\n",
+    "c[c.next_id()] = {\"Vendor\": \"next5\"}\n",
+    "c[c.next_id()] = {\"Type\": \"next6\"}"
    ]
   },
   {
@@ -212,7 +206,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(df.iloc[:, 0].str.strip() != \"\")[::-1].idxmax()"
+    "c.save()"
    ]
   },
   {
@@ -221,7 +215,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[: (df.iloc[:, 0].str.strip() != \"\")[::-1].idxmax() + 1]"
+    "c.remote"
    ]
   },
   {
@@ -230,7 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.iloc[4, 0] = \"\""
+    "pygsheets.ValueRenderOption.FORMATTED_VALUE"
    ]
   },
   {
@@ -239,7 +233,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df"
+    "api.google.sheets.update_sheet_rows(service, [(range_, [[\"x\", \"x\", \"y\"]])])"
    ]
   },
   {
@@ -248,7 +242,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(df.iloc[:, 0].str.strip() == \"\").idxmax()"
+    "data"
    ]
   },
   {
@@ -257,16 +251,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c.next_id()"
+    "service = c.client.sheet.service\n",
+    "id_ = c.spreadsheet.id\n",
+    "range_ = pygsheets.DataRange((3, 1), (3, 3), worksheet=c.worksheet)\n",
+    "\n",
+    "data = [{\"range\": range_.range, \"values\": [[\"aa\", \"ba\", \"ca\"]]}]\n",
+    "\n",
+    "body = {\n",
+    "    # How the input data should be interpreted.\n",
+    "    \"value_input_option\": \"RAW\",  # TODO: Update placeholder value.\n",
+    "    # The new values to apply to the spreadsheet.\n",
+    "    \"data\": data,  # TODO: Update placeholder value.\n",
+    "    # TODO: Add desired entries to the request body.\n",
+    "}\n",
+    "\n",
+    "body\n",
+    "\n",
+    "request = service.spreadsheets().values().batchUpdate(spreadsheetId=id_, body=body)\n",
+    "response = request.execute()"
    ]
   },
   {
