WIP FileClient, all but save implemented. SheetClient works except for setting None to delete rows. As used on 210601 to order backbone insulation with Hudson terminators.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210601 Automation prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210601 Automation prototyping.ipynb
@@ -36,6 +36,7 @@
     "from paulssonlab.api.util import base_url\n",
     "import paulssonlab.cloning.workflow as workflow\n",
     "import paulssonlab.cloning.util as cloning_util\n",
+    "import paulssonlab.cloning.io as cloning_io\n",
     "import paulssonlab.cloning.sequence as sequence\n",
     "import paulssonlab.cloning.registry as registry\n",
     "import paulssonlab.cloning.enzyme as enzyme\n",
@@ -92,7 +93,194 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Rename .gb to .gbk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files = api.google.list_drive(reg.drive_service, root=reg.gdrive_ids[(\"pLIB\", \"maps\")])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "service = build(\"drive\", \"v3\", credentials=reg.sheets_client.oauth)\n",
+    "batch = service.new_batch_http_request()\n",
+    "for name, file in files.items():\n",
+    "    if name.endswith(\".gb\"):\n",
+    "        batch.add(\n",
+    "            reg.drive_service.files().update(\n",
+    "                fileId=file[\"id\"], body={\"name\": f\"{name}k\"}\n",
+    "            )\n",
+    "        )\n",
+    "batch.execute()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test case"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = reg[(\"pTEST\", \"maps\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c.set_from_file(\n",
+    "    \"pTEST1\", \"/Users/jacob/Downloads/addgene-plasmid-59954-sequence-95195.dna\"\n",
+    ")\n",
+    "c.set_from_file(\n",
+    "    \"pTEST2\", \"/Users/jacob/Downloads/addgene-plasmid-59954-sequence-95195.gbk\"\n",
+    ")\n",
+    "c.set_from_file(\n",
+    "    \"pTEST3.bad\", \"/Users/jacob/Downloads/addgene-plasmid-59954-sequence-95195.gbk\"\n",
+    ")\n",
+    "c.set_from_file(\n",
+    "    (\"foo_dir\", \"pTEST3.bad\"),\n",
+    "    \"/Users/jacob/Downloads/addgene-plasmid-59954-sequence-95195.gbk\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(c.local.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seq1 = cloning_io.read_file(\n",
+    "    \"/Users/jacob/Downloads/addgene-plasmid-59954-sequence-95195.dna\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c[\"dir1\"] = {\"a\": seq1, \"b\": seq1}\n",
+    "c[(\"b_dir\", \"dir2\")] = {\"a\": seq1, \"b\": seq1}\n",
+    "c.content[(\"b_dir\", \"dir3\")] = {\"a.gbk\": seq1, \"b.gbk\": seq1}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c.raw[(\"c_dir\", \"c.txt\")] = {\"mimeType\": \"plain/text\", \"content\": \"blah\"}\n",
+    "c.bytes[(\"c_dir\", \"c.txt\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c.raw[\"test3.gb\"] = None\n",
+    "c[\"test4\"] = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c[\"test4\"] = \"foobar\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = (\"b_dir\", \"dir2\", \"a.gbk\")\n",
+    "folders = set()\n",
+    "folders.update(x[:i] for i in range(1, len(x)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "folders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "set.update?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "set(sorted(set([(\"b\", 1), (\"a\", 0)])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(c.local.keys())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del reg.clients[(\"pTEST\", \"maps\")]"
    ]
   },
   {
@@ -119,16 +307,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "del reg.clients[(\"oTEST\", \"oligos\")]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c = reg[(\"oTEST\", \"oligos\")]"
+    "c = reg[(\"pTEST\", \"maps\")]"
    ]
   },
   {
@@ -146,7 +325,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c[\"OTEST4\"]"
+    "c._download()"
    ]
   },
   {
@@ -155,7 +334,72 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c.remote"
+    "c._remote"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c[()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c.client.files().update(\n",
+    "    fileId=\"1QTyMeRMLF8F3Hf21Dmc3PDY_3PPhA2U1\", body={\"trashed\": True}\n",
+    ").execute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "api.google.delete_drive(c.client, \"1QTyMeRMLF8F3Hf21Dmc3PDY_3PPhA2U1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c._remote_folders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sorted(c._remote_folders)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c[(\"bar\", \"bar1\", \"plib84\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c.raw[(\"bar\", \"bar1\", \"plib84.gb\")]"
    ]
   },
   {
@@ -173,7 +417,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c.clear_cache()"
+    "c.content[\"plib84.gb\"]"
    ]
   },
   {
@@ -182,9 +426,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c[\"oTEST2\"] = {\"Author\": \"oTEST2 author\", \"Name\": \"oTEST2_name\"}\n",
-    "c[\"oTEST4\"] = {\"Author\": \"oTEST4 author\", \"Name\": \"oTEST4_name\"}\n",
-    "c[c.next_id()] = {\"Name\": \"next\"}"
+    "c[\"test3\"] = None"
    ]
   },
   {
@@ -193,11 +435,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c[c.next_id()] = {\"Name\": \"next2\"}\n",
-    "c[c.next_id()] = {\"Author\": \"next3\"}\n",
-    "c[c.next_id()] = {\"Date\": \"next4\"}\n",
-    "c[c.next_id()] = {\"Vendor\": \"next5\"}\n",
-    "c[c.next_id()] = {\"Type\": \"next6\"}"
+    "c._remote"
    ]
   },
   {
@@ -206,69 +444,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c.save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c.remote"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pygsheets.ValueRenderOption.FORMATTED_VALUE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "api.google.sheets.update_sheet_rows(service, [(range_, [[\"x\", \"x\", \"y\"]])])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "service = c.client.sheet.service\n",
-    "id_ = c.spreadsheet.id\n",
-    "range_ = pygsheets.DataRange((3, 1), (3, 3), worksheet=c.worksheet)\n",
-    "\n",
-    "data = [{\"range\": range_.range, \"values\": [[\"aa\", \"ba\", \"ca\"]]}]\n",
-    "\n",
-    "body = {\n",
-    "    # How the input data should be interpreted.\n",
-    "    \"value_input_option\": \"RAW\",  # TODO: Update placeholder value.\n",
-    "    # The new values to apply to the spreadsheet.\n",
-    "    \"data\": data,  # TODO: Update placeholder value.\n",
-    "    # TODO: Add desired entries to the request body.\n",
-    "}\n",
-    "\n",
-    "body\n",
-    "\n",
-    "request = service.spreadsheets().values().batchUpdate(spreadsheetId=id_, body=body)\n",
-    "response = request.execute()"
+    "c.bytes[\"test3.gb\"] = "
    ]
   },
   {
