[shenker/cloning] As used on 210601 to order 2r2 backbone insulation.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210601 Terminators.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210601 Terminators.ipynb
@@ -334,13 +334,22 @@
     "\n",
     "\n",
     "def get_nonrepetitive(\n",
-    "    similarity_func, max_similarity, candidates, others, num, enzymes=[]\n",
+    "    similarity_func,\n",
+    "    max_similarity,\n",
+    "    candidates,\n",
+    "    others,\n",
+    "    num,\n",
+    "    enzymes=[],\n",
+    "    blacklist=[],\n",
     "):\n",
     "    accepted = []\n",
     "    accepted_keys = []\n",
     "    idx = 0\n",
     "    for i in range(num):\n",
     "        while idx < len(candidates):\n",
+    "            if candidates.index[idx] in blacklist:\n",
+    "                idx += 1\n",
+    "                continue\n",
     "            candidate = candidates.iloc[idx]\n",
     "            if any(enzyme.re_search(candidate, enz) for enz in enzymes):\n",
     "                idx += 1\n",
@@ -724,20 +733,11 @@
     "insulation_pool_6 = get_nonrepetitive(\n",
     "    similarity,\n",
     "    0.5,\n",
-    "    strong_all[\"Sequence\"],\n",
+    "    natural_terminators[\"Sequence\"],\n",
     "    selected_bidirectional_terms[\"sequence\"],\n",
     "    6,\n",
     "    enzymes=ENZYMES,\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "insulation_pool_6"
    ]
   },
   {
@@ -804,20 +804,12 @@
     "insulation_pool_8 = get_nonrepetitive(\n",
     "    similarity,\n",
     "    0.6,\n",
-    "    strong_all[\"Sequence\"],\n",
+    "    natural_terminators[\"Sequence\"],\n",
     "    selected_bidirectional_terms[\"sequence\"],\n",
     "    8,\n",
     "    enzymes=ENZYMES,\n",
+    "    blacklist=[\"BBa_B0010\"],\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "insulation_pool_8"
    ]
   },
   {
@@ -862,7 +854,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reg.clear_cache()"
+    "# backbone_insulation_2r2 = {\n",
+    "#     #\"upstream\": [\"ECK120029600\", \"ECK120033736\", \"ECK120010799_r\", \"BBa_B0062-R_r\"],\n",
+    "#     \"upstream\": [\"pheA-1\", \"ECK120029600\", \"ECK120015440\", \"ECK120010799_r\"],\n",
+    "#     \"downstream\": [\"ECK120029600\", \"ECK120010858-R\", \"ECK120015440\",\"ECK120010799_r\"],\n",
+    "# }"
    ]
   },
   {
@@ -873,6 +869,15 @@
    "source": [
     "olib = reg[(\"oLIB\", \"oligos\")]\n",
     "olt = reg[(\"oLT\", \"oligos\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "olt.clear_cache()"
    ]
   },
   {
@@ -920,7 +925,7 @@
     "\n",
     "\n",
     "for orientation, terms in backbone_insulation_2r2.items():\n",
-    "    seq = get_terminator(strong_all[\"Sequence\"], terms)\n",
+    "    seq = get_terminator(natural_terminators[\"Sequence\"], terms)\n",
     "    if orientation == \"upstream\":\n",
     "        seq = sequence.reverse_complement(seq)\n",
     "    seq = workflow.add_flanks(seq, [backbone_flanks[orientation]])\n",
@@ -930,7 +935,9 @@
     "        terms=\" / \".join(terms),\n",
     "        ts=\" / \".join(\n",
     "            [\n",
-    "                \"{:.0f}\".format(strong_all.loc[strip(term, \"_r\"), \"Average Strength\"])\n",
+    "                \"{:.0f}\".format(\n",
+    "                    natural_terminators.loc[strip(term, \"_r\"), \"Average Strength\"]\n",
+    "                )\n",
     "                for term in terms\n",
     "            ]\n",
     "        ),\n",
