[sigma_circuits] 210602 RBS ramp experiment analysis. Fixed parsing number of fovs/timesteps for recovered ND2 files.

--- a/paulssonlab/src/paulssonlab/projects/sigma_circuits/210605 Recovered nd2 debugging.ipynb
+++ b/paulssonlab/src/paulssonlab/projects/sigma_circuits/210605 Recovered nd2 debugging.ipynb
@@ -101,13 +101,195 @@
     "# filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210329_expt210204nonflipped_psc101.pickle\"\n",
     "# filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210402_expt210331ramp.pickle\"\n",
     "# filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210507_expt210505.pickle\"\n",
-    "filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210514_expt210511.pickle\"\n",
+    "# filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210514_expt210511.pickle\"\n",
+    "filename = \"/n/groups/paulsson/jqs1/sigma-circuits/210605_expt210602_1.pickle\"\n",
     "data = pickle.load(open(filename, \"rb\"))\n",
     "df = data[\"table\"]\n",
     "md = data[\"metadata\"]\n",
     "mux_log = data[\"mux_log\"]\n",
     "experiment_txt = data[\"experiment.txt\"]\n",
     "grid_df = data[\"grid\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "849033c9-2a4f-41f2-9940-63fd3c82265e",
+   "metadata": {},
+   "source": [
+    "# ND2Reader debugging"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3581aab-3175-4d1c-af04-012b8011f786",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nd2_filename = (\n",
+    "    \"/n/scratch3/groups/hms/sysbio/paulsson/jqs1/210602/RBS_new_terminators.nd2\"\n",
+    ")\n",
+    "nd2 = matriarch_stub.get_nd2_reader(nd2_filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4659ebe4-36d6-4185-bf6a-70e2cbda4bde",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "md = metadata.parse_nd2_metadata(nd2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "baceb0b8-6957-4785-800f-a3c43e40f692",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "md.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f63b36f6-aee7-4479-9935-b8827ce06208",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "md[\"image_attributes\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b07890e7-0d28-4f98-a02d-eea359a31459",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_in(\n",
+    "    (\"image_metadata\", \"SLxExperiment\", \"ppNextLevelEx\", \"\", \"uLoopPars\", \"Points\", \"\"),\n",
+    "    md,\n",
+    ")  # .keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e275fd16-6667-4e12-bac5-50d7d1a34c24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_in((\"image_metadata\", \"SLxExperiment\", \"uLoopPars\"), md)  # .keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06c8fb2c-5ecd-4a96-a99e-7f98e11d6b02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nd2_2 = matriarch_stub.get_nd2_reader(\n",
+    "    \"/n/scratch3/groups/hms/sysbio/paulsson/jqs1/210602/RBS_new_terminators_2.nd2\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a8b6aa2-5e5a-470e-9dc3-d0bd34fe6d0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nd2.sizes[\"v\"] = nd2_2.sizes[\"v\"]\n",
+    "nd2.metadata[\"fields_of_view\"] = list(range(nd2.sizes[\"v\"]))\n",
+    "nd2.sizes[\"t\"] = (\n",
+    "    md[\"image_attributes\"][\"SLxImageAttributes\"][\"uiSequenceCount\"] // nd2.sizes[\"v\"]\n",
+    ")\n",
+    "nd2.sizes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60c25632-a4b2-490f-85b3-1d3262e2d585",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(12, 12))\n",
+    "plt.imshow(nd2.get_frame_2D(c=2, v=159, t=0), cmap=\"Blues\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1fcd940c-a545-4dcf-8877-7e951d862ce8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(12, 12))\n",
+    "plt.imshow(nd2.get_frame_2D(c=2, v=159, t=84), cmap=\"Blues\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9fbf476-ef6f-4b46-bd4b-be82eea1364a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nd2.get_frame_2D(c=2, v=159, t=84) - nd2.get_frame_2D(c=2, v=159, t=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3ff1a1e-2e10-4407-92e0-9a7e80ed5b3d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34f4db2d-392f-4b33-905b-be23f81bfba2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nd2._parser._calculate_image_group_number??"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d0c3533-8656-4e79-a388-531b76411db3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nd2._parser.get_image_by_attributes??"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c8add7b-21c9-43ca-9962-520f34414483",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nd2._parser.get_image_by_attributes(t, v, c, z, y, x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d57a062b-e4e3-4496-bbaa-b1396bc8ce54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nd2.get_frame_2D??"
    ]
   },
   {
@@ -267,19 +449,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sensor_size_md = get_in(\n",
-    "    (\n",
-    "        \"variant\",\n",
-    "        \"no_name\",\n",
-    "        \"vGrabberCameraSettings\",\n",
-    "        \"FormatFast\",\n",
-    "        \"fmtDesc\",\n",
-    "        \"sizeSensorPixels\",\n",
-    "    ),\n",
-    "    md[\"grabber_settings\"],\n",
-    ")\n",
-    "sensor_width = int(get_in((\"cx\", \"@value\"), sensor_size_md))\n",
-    "sensor_height = int(get_in((\"cy\", \"@value\"), sensor_size_md))"
+    "sensor_width = int(get_in((\"image_attributes\", \"SLxImageAttributes\", \"uiWidth\"), md))\n",
+    "sensor_height = int(get_in((\"image_attributes\", \"SLxImageAttributes\", \"uiHeight\"), md))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d989849-7b49-4f23-8b80-3586c4421ef5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e7765d5-6f8d-4183-9ed1-f7f87df72352",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "cells = df.loc[IDX[:, :, 1:]].reset_index()\n",
+    "cells[\"pos\"] = (cells[\"pos\"] + cells[\"t\"]) % 160\n",
+    "cells = pd.merge(cells, grid_df, left_on=\"pos\", right_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb12466c-9a85-438f-8f80-a8de89827e2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cells"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "468cbba0-4206-430c-a26d-b04fed41c7cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[IDX[:, :, 1:]].join(grid_df).reset_index()"
    ]
   },
   {
@@ -291,7 +505,7 @@
    "source": [
     "%%time\n",
     "# skip background\n",
-    "cells = df.loc[IDX[:, :, 1:]].join(grid_df).reset_index()\n",
+    "# cells = df.loc[IDX[:, :, 1:]].join(grid_df).reset_index()\n",
     "cells[\"dist_from_center\"] = np.sqrt(\n",
     "    (cells[\"centroid-0\"] - sensor_width) ** 2\n",
     "    + (cells[\"centroid-1\"] - sensor_height) ** 2\n",
@@ -301,11 +515,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3ae4b6be-03a8-42d1-aab3-2b6d77ca3397",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cells[\"area\"][cells[\"area\"].between(100, 1e3)].hvplot.hist(bins=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "purple-tobacco",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cells[\"dist_from_center\"].hvplot.hist()"
+    "cells[\"dist_from_center\"].hvplot.hist(bins=50)"
    ]
   },
   {
@@ -315,7 +539,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cells[\"RFP-PENTA\"][cells[\"RFP-PENTA\"].between(100, 3e3)].hvplot.hist(bins=300)"
+    "cells[\"RFP-PENTA\"][cells[\"RFP-PENTA\"].between(100, 5e3)].hvplot.hist(bins=100)"
    ]
   },
   {
@@ -325,7 +549,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cells[\"GFP-PENTA\"][cells[\"GFP-PENTA\"].between(100, 8e3)].hvplot.hist(bins=300)"
+    "cells[\"GFP-PENTA\"][cells[\"GFP-PENTA\"].between(100, 3.5e3)].hvplot.hist(bins=100)"
    ]
   },
   {
@@ -349,12 +573,12 @@
    "source": [
     "%%time\n",
     "filtered_cells = cells[\n",
-    "    cells[\"area\"].between(200, 800)\n",
-    "    & cells[\"GFP-PENTA\"].between(100, 8000)\n",
-    "    & cells[\"RFP-PENTA\"].between(475, 4000)\n",
+    "    cells[\"area\"].between(150, 400)\n",
+    "    # & cells[\"GFP-PENTA\"].between(100, 8000)\n",
+    "    # & cells[\"RFP-PENTA\"].between(475, 4000)\n",
     "    # & ~cells[\"row\"].isin([\"F\"])\n",
     "    # & (cells[\"dist_from_center\"] < 3000)\n",
-    "    & (cells[\"t\"] <= 169)\n",
+    "    # & (cells[\"t\"] <= 169)\n",
     "][[\"GFP-PENTA\", \"RFP-PENTA\", \"area\", \"row\", \"pos\", \"t\"]]"
    ]
   },
@@ -526,9 +750,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1b369ddb-dfb9-4d93-8721-8fc8592d8c85",
+   "metadata": {},
+   "source": [
+    "# Debugging"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "champion-freeze",
+   "id": "0b45a78e-23ef-46f0-95ca-80646f5844cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered_cells_fixed = filtered_cells.copy()\n",
+    "filtered_cells_fixed[\"pos\"] = (\n",
+    "    filtered_cells_fixed[\"pos\"] + filtered_cells_fixed[\"t\"]\n",
+    ") % 160"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1aef885-9e1c-407b-957e-ac0bc50e2f33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "pos_t_means = filtered_cells_fixed.groupby([\"pos\", \"t\"]).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31fb7934-5891-45a3-8c05-35ff30700b0b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pos_t_means"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "821dd78e-b663-4404-8a59-b0b38ee8faa3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pos_t_means.hvplot.heatmap(\"pos\", \"t\", \"GFP-PENTA\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "378e2188-c242-4808-8c04-e464a7c176da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pos_t_means.hvplot.heatmap(\"pos\", \"t\", \"GFP-PENTA\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43114b9b-7d38-48dc-aeb7-a44e08ff18bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(list(range(160)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bcb3a1be-d8f8-44de-a865-564ce2defe35",
    "metadata": {},
    "outputs": [],
    "source": []
